Added Images folder and Few tweaks in login.html

--- a/templates/MyBriefcaseLoginPage.html
+++ b/templates/MyBriefcaseLoginPage.html
@@ -13,14 +13,14 @@
 			<div class = "col-sm-2" style = "margin-top:10%; width:400px; height:auto">
 			<div>
 				<img 
-				src = "https://files.slack.com/files-tmb/T2493KKK7-F2FJWMDNZ-b83aa71dc6/unity_care_since_1993_logo_-_color_720.jpg" 
+				src = "static/images/unitycareLogo.jpg" 
 				width = "200px" 
 				height = "180px" 
 				style = "margin-left:-15px"><span style = "position:absolute; TOP:125px; font-size: 20px">My Briefcase</span>
 			</div>
 			
 				<p>Username:</p> <input class = "form-control" type = "email" ng-model = "username"></input>
-				<p>Password: </p><input class = "form-control" ng-model = "password"></input>
+				<p>Password: </p><input class = "form-control" type = "password" ng-model = "password"></input>
 				<button type = "submit" class = "btn btn-primary" ng-click = "submit()" style = "float:right; margin-top:20px">Log In</button>
 			</div>
 		</form>
