--- a/templates/MyBriefcaseLoginPage.html
+++ b/templates/MyBriefcaseLoginPage.html
@@ -7,6 +7,8 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script src = "http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+
+	<script src = "static/js/MyBriefcaseLoginPageAngular.js"></script>
 	</head>
 	<body ng-app = "myBriefcase">
 		<form ng-controller = "myBriefcaseCtrl">
@@ -14,7 +16,7 @@
 			<div class = "col-sm-2" style = "margin-top:10%; width:400px; height:auto">
 			<div>
 				<img 
-				src = "static/images/unitycareLogo.jpg" 
+				src = "C:\Users\vishn\Desktop\unity.jpg" 
 				width = "200px" 
 				height = "180px" 
 				style = "margin-left:-15px"><span style = "position:absolute; TOP:125px; font-size: 20px">My Briefcase</span>
